syntax = "proto3";

package lu.micro.srv.user;

service User {
	rpc Register (RegisterRequest) returns (Response) {}
	rpc Login (LoginRequest) returns (Response) {}
	rpc UpdatePassword (UpdatePasswordRequest) returns (Response) {}
	rpc List (ListRequest) returns (Response) {}
}

message Userinfo {
	uint32 id = 1;
	string name = 2;
	string phone = 3;
	string password = 4;
}

message RegisterRequest{
	Userinfo user = 1;
}

message ListRequest{
	Userinfo user = 1;
}

message LoginRequest{
	string phone = 1;
	string password = 2;
}

message UpdatePasswordRequest{
	uint32 uid = 1;
	string oldPassword = 2;
	string newPassword = 3;
	string confirmPassword = 4;
}

message Response {
	string code = 1;
	string msg = 2;
}